--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
   color: white;
   background-color: var(--purple);
   padding: 20px;
+  transition: 0.5s;
 }
 header{
   display: flex;
@@ -108,6 +109,8 @@ label:has(input:checked){
   align-items: center;
   font-weight: bold;
   border-radius: 30px;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 .cell.active{
   background-color:var(--lighter-purple);
